[package]
name = "interp-toy"
version = "0.1.0"
license = "MIT/Apache-2.0"
description = "A GUI app for experimenting with sparse interpolation"
authors = ["Raph Levien <raph.levien@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
druid = {git = "https://github.com/xi-editor/druid", rev = "cfbde68ca16c67b20268a5999da469ed76999b82" }
kurbo = "0.5.1"
rbf-interp = "0.1.3"
nalgebra = "0.18"
structopt = "0.3.2"

glyphstool = { path = "glyphstool" }
