[package]
name = "glyphstool"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "glyphstool"

[dependencies]
kurbo = "0.5.1"
plist_derive = { path = "plist_derive" }
